--- a/docs/team/qiujiaaa.adoc
+++ b/docs/team/qiujiaaa.adoc
@@ -8,35 +8,38 @@
 == Overview
 
 Seller Manager Lite (SML) is a desktop application used for handphone resellers to manage their customers, phones, orders and schedules.
-The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 10 kLoC.
+The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 10+ kLoC.
 
 == Summary of contributions
 
 * *Major enhancement*: added *GUI to display schedules in a calendar.*
-** What it does: This feature allows our users to view thier schedules graphically, as well as navigate around the panel after adding/editing/deleting schedules.
+** What it does: This feature allows our users to view their schedules graphically, as well as navigate around the panel after adding/editing/deleting schedules.
 ** Justification: This feature is a critical addition for sellers who have numerous schedules planned throughout the week. Without a visual representation of a calendar, it would be extremely non-user-friendly as sellers would have to check through their list of schedules and the timings one by one.
 ** Highlights: I designed a panel class to contain the third-party library for rendering events as a calendar. The class acts as a wrapper around the calendar and contains the logic for controlling the calendar.
 To make the application more user friendly, the application automatically switches to the calendar panel when any schedule commands are executed. This is to provide users a visual confirmation of the results of their command.
 ** Credits: Used _JFXtras_ for Calendar Panel to render schedules visually.
-** Integrated library in PR https://github.com/AY1920S1-CS2103T-T09-4/main/pull/105[#105]
 
-* *Other complementing enhancement*:
-** Schedule commands (Logic) to complement the calendar display. (https://github.com/AY1920S1-CS2103T-T09-4/main/pull/115[#115], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/138/files[#138], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/162[#162], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/187[#187])
+* *Other enhancement*:
+** Schedule commands (Logic) to complement the calendar display.
+** Assisted to set up some parts in Model initially. (Order and Schedule)
 
 * *Code contributed*: https://nus-cs2103-ay1920s1.github.io/tp-dashboard/#search=qiujiaaa&sort=groupTitle&sortWithin=title&since=2019-09-06&timeframe=commit&mergegroup=false&groupSelect=groupByRepos&breakdown=false[RepoSense tP Code Dashboard]
+** Functional Code
+*** Calendar GUI (https://github.com/AY1920S1-CS2103T-T09-4/main/pull/105[#105])
+*** Logic: Basic CRUD + other Schedule commands (https://github.com/AY1920S1-CS2103T-T09-4/main/pull/115[#115], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/138/files[#138], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/162[#162], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/187[#187])
+*** Model (https://github.com/AY1920S1-CS2103T-T09-4/main/pull/65[#65], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/162[#162])
+** Test Code
+*** Logic: Command and Parser tests (https://github.com/AY1920S1-CS2103T-T09-4/main/pull/167[#167], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/187[#187], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/265[#265])
+*** Model & Model Manager (https://github.com/AY1920S1-CS2103T-T09-4/main/pull/81[#81], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/172[#172])
 
 * *Other contributions*:
 ** Project management:
 *** Added some issues in issue tracker. (https://github.com/AY1920S1-CS2103T-T09-4/main/issues/created_by/qiujiaaa[Issues])
 
-** Enhancements to existing features:
-*** Assisted to set up some parts in Model initially. (https://github.com/AY1920S1-CS2103T-T09-4/main/pull/65[#65])
-*** Wrote tests for Logic and Model modules.(https://github.com/AY1920S1-CS2103T-T09-4/main/pull/167[#167], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/172[#172], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/187[#187], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/265/files[#265], https://github.com/AY1920S1-CS2103T-T09-4/main/pull/81[#81])
-
 ** Documentation:
 *** Wrote Contact Us page. (https://github.com/AY1920S1-CS2103T-T09-4/main/pull/47[#47])
 *** Initial tweak of AB3 User Guide to fit our application. (https://github.com/AY1920S1-CS2103T-T09-4/main/pull/52[#52])
-*** Edited and added some diagrams in Developer Guide. (https://github.com/AY1920S1-CS2103T-T09-4/main/pull/150/files[#150])
+*** Edited and added diagrams in Developer Guide. (https://github.com/AY1920S1-CS2103T-T09-4/main/pull/150/files[#150])
 *** Added test cases in Appendix G (https://github.com/AY1920S1-CS2103T-T09-4/main/pull/268[#268])
 
 ** Community:
