--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -752,23 +752,21 @@ image::filter_wysd.png[width=450]
 
 *What you should see*
 
-If successfully executed,
-the message "x persons listed!" will be displayed in the result box (red box), where x is the number of
-athletes that match the tag you filtered by.
+If successfully executed, the result box will display the message "_x persons listed!_", where _x_ is the
+number of athletes that have the tag you filtered by, as shown in the red box in the diagram below.
 
-Additionally, the athlete list (orange box) will contain only the athletes that have the tag you filtered
-by.
+Additionally, the athlete list (orange box) will show only the athletes that have the tag you filtered by.
 
-In the example given below, 3 athletes have the `butterfly` tag.
+In this example below, 3 athletes have the `butterfly` tag.
 
-.Note that the index numbers of the athletes in the filtered list may differ from that of the unfiltered list (refer to the diagram below for an explanation).
+.Note that the index numbers of the athletes in the filtered list may differ from that of the unfiltered list. Refer to the diagram below for an explanation.
 image::filter_wyss.png[width=450]
 
 The diagram below shows the change in the active list (from unfiltered to filtered) when the filter is
 applied.
-Notice that the index of some athletes have changed (eg. Joseph Schooling has changed from 3 to 2).
 
-image::filter_change.png[width="395"]
+.Notice that the index of some athletes have changed (eg. Joseph Schooling has changed from 3 to 2).
+image::filter_change.png[width="650"]
 
 ==== Finding athletes by their name : `find`
 
