--- a/docs/team/junhuplim.adoc
+++ b/docs/team/junhuplim.adoc
@@ -2,7 +2,9 @@
 :site-section: AboutUs
 :imagesDir: ../images
 :sectnums:
+ifdef::env-github[]
 :note-caption: :information_source:
+endif::[]
 :stylesDir: ../stylesheets
 
 == Introduction
@@ -50,7 +52,7 @@ Note the following symbols and formatting used in this document:
 
 [horizontal]
 
-NOTE:: This symbol indicates important information
+NOTE: This symbol indicates important information
 
 `command`:: A grey highlight (called a mark-up) indicates that this is a command that can be typed into the command line and executed by the application.
 
