--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -369,8 +369,8 @@ Clears all existing actors of the 2nd show in the list.
 Note: Search results will appear in the Search Page, click kbd:[3] to go straight to the search page.
 ====
 
-Searches for shows whose names contain any of the given keywords from the watchlist, watched list and online/internal
-database. +
+Searches for shows whose names contain any of the given keywords from the online database, unless specified to be from
+the watchlist or watched list. +
 
 Format:
 
@@ -380,22 +380,24 @@ Format:
 * by genre: +
 `search g/GENRE... [n/SHOW_NAME]... [a/ACTOR_NAME]... [o/FROM_ONLINE] [t/TYPE] [w/HAS_WATCHED]`
 
-* by actor (from watchlist/internal database): +
+* by actor (from watchlist): +
 `search a/ACTOR_NAME... [n/SHOW_NAME]... [g/GENRE]... [o/FROM_ONLINE] [t/TYPE] [w/HAS_WATCHED]`
 
+[NOTE]
+To be able to search from watchlist or watched list, do specify `o/no`. To search specifically from watchlist, include
+`o/no w/no` and to search specifically from watchlist, include `o/no w/yes`. +
+Space between prefix and slash is not acceptable. e.g. "n /Avengers" will throw an error. +
+For `FROM_ONLINE` and `HAS_WATCHED`, only `yes`, `true`, `no` and `false` would be accepted. +
+For `[o/FROM_ONLINE] [t/TYPE] [w/HAS_WATCHED]`, if multiple entries are entered, only the last would be considered.
+e.g. "search n/Avengers t/movie t/tv" will be interpreted as "search n/Avengers t/tv". +
+When searching based on actor, only shows from the watchlist will be searched. +
+When searching based on genre online, only movies will be searched.
 
-****
-* The search is case insensitive. e.g "avengers" will match "Avengers"
-* The order of the keywords matter. e.g. "Chris Evans" will not match "Evans Chris"
-* Not only full words will be matched. e.g. "Joke" will also match with "Joker"
-* Space after prefix is acceptable. e.g. "n/   Avengers" will be interpreted as "n/Avengers"
-* Space between prefix and slash is not acceptable. e.g. "n /Avengers" will throw an error.
-* For `FROM_ONLINE` and `HAS_WATCHED`, only `yes`, `true`, `no` and `false` would be accepted.
-* For `[o/FROM_ONLINE] [t/TYPE] [w/HAS_WATCHED]`, if multiple entries are entered, only the last would be considered.
-e.g. "search n/Avengers t/movie t/tv" will be interpreted as "search n/Avengers t/tv"
-* When searching based on actor, only shows from the watchlist will be searched.
-* When searching based on genre online, only movies will be searched.
-****
+[TIP]
+The search is case insensitive. e.g "avengers" will match "Avengers". +
+The order of the keywords matter. e.g. "Chris Evans" will not match "Evans Chris". +
+Not only full words will be matched. e.g. "Joke" will also match with "Joker". +
+Space after prefix is acceptable. e.g. "n/   Avengers" will be interpreted as "n/Avengers".
 
 *Example Usage:* +
 You may want to search for movies named "Avengers" and also movies with an actor called "Tom".
@@ -436,29 +438,38 @@ image::searchPageLoadingScreen.png[width="790"]
 
 The loading page as shown above will appear while EzWatchlist searches for your shows.
 
-*Scenario 1: You are offline*
+[TIP]
+You can go to the other pages in the mean time. Do allow some time for the search to load.
 
 [start=3]
-3. The show can now be viewed under the watched tab by clicking the watched tab or hitting the keyboard shortcut `2`.
+3. Search page shows the list of shows based on `search n/Avengers a/Tom t/movie`.
 
+*Scenario A: You are offline* +
+Only movies from the watchlist or offline database with the movie name "Avengers" or actor name "Tom" will be shown,
+as seen in the figure below.
 
+.*Search Page* showing the search results when offline
+image::searchPageSearchedForAvengersWhenOffline.png[width="790"]
 
-*Scenario 2: You are online*
-3. The shows
-image::SearchAvengers.png[width="790"]
+*Scenario B: You are online* +
+Only movies from the online database with the movie name "Avengers" or actor name "Tom" will be shown, as seen in the
+figure below.
+
+.*Search Page* showing the search results when online
+image::searchPageSearchedForAvengersWhenOnline.png[width="790"]
 
 Examples:
 
 * By name:
-** `search n/Joker i/yes` +
+** `search n/Joker o/no` +
 Returns shows with the name "Joker" within the watchlist
 ** `search n/Avengers g/Science Fiction t/movie n/Spiderman` +
-Returns movies with the name "Avenger" or "Spiderman" and movies with "Science Fiction" as genre
+Returns movies from the online database with the name "Avenger" or "Spiderman" and movies with the genre "Science Fiction"
 * By genre:
 ** `search g/Action t/movie` +
-Returns movies with the genre "Action"
+Returns movies from the online database with the genre "Action"
 * By actor:
-** `search a/Tom w/no` +
+** `search a/Tom o/no w/no` +
 Returns shows within the watchlist with actor named "Tom"
 // end::search[]
 
@@ -560,9 +571,9 @@ e.g. `delete 3`
 e.g. `edit 2 n/John Wick a/Johnny Depp`
 * *Search*
 ** *by name* : `search n/SHOW_NAME... [g/GENRE]... [a/ACTOR_NAME]... [i/IS_INTERNAL] [t/TYPE] [w/IS_WATCH]` +
-e.g. `search n/Joker i/yes` searches for shows with the name 'Joker' within the watchlist
+e.g. `search n/Joker o/no` searches for shows with the name 'Joker' within the watchlist
 ** *by genre* `search g/GENRE... [n/SHOW_NAME]... [a/ACTOR_NAME]... [i/IS_INTERNAL] [t/TYPE] [w/IS_WATCH]` +
-e.g. `search g/Action t/movie` searches for movies with the genre 'Action'
+e.g. `search g/Action t/movie` searches for movies from the online database with the genre 'Action'
 ** *by actor from watchlist* `search a/ACTOR_NAME... [n/SHOW_NAME]... [g/GENRE]... [t/TYPE] [w/IS_WATCH]` +
 e.g. `search a/Tom` searches from shows within the watchlist with actor named 'Tom'
 
