--- a/docs/team/michelleykw.adoc
+++ b/docs/team/michelleykw.adoc
@@ -63,3 +63,11 @@ Other contributions: +
 * Community:
 * Tools:
 
+=== 1.4 Contributions to the User Guide
+
+include::../UserGuide.adoc[tag=search]
+
+=== 1.5 Contributions to the Developer Guide
+
+include::../DeveloperGuide.adoc[tag=search]
+
