--- a/README.adoc
+++ b/README.adoc
@@ -2,6 +2,8 @@
 ifdef::env-github,env-browser[:relfileprefix: docs/]
 
 https://travis-ci.org/AY1920S1-CS2103T-T10-3/main[image:https://travis-ci.org/AY1920S1-CS2103T-T10-3/main.svg?branch=master[Build Status]]
+https://ci.appveyor.com/project/blimyj/main/branch/master[image:https://ci.appveyor.com/api/projects/status/o281h6kwxi79gf2u/branch/master?svg=true[Build status]]
+https://coveralls.io/github/AY1920S1-CS2103T-T10-3/main[image:https://coveralls.io/repos/github/AY1920S1-CS2103T-T10-3/main/badge.svg[Coverage Status]]
 
 ifdef::env-github[]
 image::docs/images/Ui.png[width="600"]
